--- a/Tasker/WebApp/WebApp.csproj
+++ b/Tasker/WebApp/WebApp.csproj
@@ -15,7 +15,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DAL\DAL.csproj" />
+        <ProjectReference Include="..\DAL.App.EF\DAL.App.EF.csproj" />
+        <ProjectReference Include="..\Identity\Identity.csproj" />
     </ItemGroup>
 
 </Project>
