--- a/Tasker/WebApp/WebApp.csproj
+++ b/Tasker/WebApp/WebApp.csproj
@@ -19,4 +19,126 @@
         <ProjectReference Include="..\Identity\Identity.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Addresses\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Addresses\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Addresses\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Addresses\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Addresses\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Skills\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Skills\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Skills\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Skills\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Skills\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Tasks\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Tasks\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Tasks\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Tasks\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Tasks\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\TaskTypes\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\TaskTypes\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\TaskTypes\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\TaskTypes\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\TaskTypes\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserGroups\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserGroups\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserGroups\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserGroups\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserGroups\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserInGroups\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserInGroups\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserInGroups\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserInGroups\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserInGroups\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnAddresses\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnAddresses\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnAddresses\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnAddresses\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnAddresses\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnTasks\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnTasks\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnTasks\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnTasks\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserOnTasks\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Users\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Users\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Users\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Users\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Users\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserSkills\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserSkills\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserSkills\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserSkills\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserSkills\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserTypes\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserTypes\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserTypes\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserTypes\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\UserTypes\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\HourlyRates\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\HourlyRates\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\HourlyRates\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\HourlyRates\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\HourlyRates\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Identifications\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Identifications\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Identifications\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Identifications\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Identifications\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\IdentificationTypes\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\IdentificationTypes\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\IdentificationTypes\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\IdentificationTypes\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\IdentificationTypes\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\InvoiceLines\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\InvoiceLines\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\InvoiceLines\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\InvoiceLines\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\InvoiceLines\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Invoices\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Invoices\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Invoices\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Invoices\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Invoices\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\MeansOfPayments\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\MeansOfPayments\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\MeansOfPayments\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\MeansOfPayments\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\MeansOfPayments\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Payments\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Payments\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Payments\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Payments\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Payments\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\PriceLists\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\PriceLists\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\PriceLists\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\PriceLists\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\PriceLists\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Prices\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Prices\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Prices\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Prices\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Prices\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Reviews\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Reviews\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Reviews\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Reviews\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Reviews\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Cities\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Cities\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Cities\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Cities\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Cities\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Countries\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Countries\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Countries\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Countries\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Countries\Index.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ApiControllers" />
+    </ItemGroup>
+
 </Project>
