--- a/Tasker/Domain/Domain.csproj
+++ b/Tasker/Domain/Domain.csproj
@@ -15,4 +15,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Contracts.DAL.Base\Contracts.DAL.Base.csproj" />
+    </ItemGroup>
+
 </Project>
