--- a/TaskerClient/package.json
+++ b/TaskerClient/package.json
@@ -13,6 +13,7 @@
     "@types/jquery": "^3.3.29",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.0",
+    "aurelia-fetch-client": "^1.8.2",
     "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.2",
     "bootstrap": "^4.3.1",
