--- a/Tasker/WebApp/WebApp.csproj
+++ b/Tasker/WebApp/WebApp.csproj
@@ -21,6 +21,8 @@
       <ProjectReference Include="..\DAL.App.DTO\DAL.App.DTO.csproj" />
       <ProjectReference Include="..\DAL.App.EF\DAL.App.EF.csproj" />
       <ProjectReference Include="..\Identity\Identity.csproj" />
+      <ProjectReference Include="..\PublicApi.v1.DTO\PublicApi.v1.DTO.csproj" />
+      <ProjectReference Include="..\PublicApi.v1\PublicApi.v1.csproj" />
     </ItemGroup>
 
     <ItemGroup>
