--- a/Tasker/BLL.App.DTO/BLL.App.DTO.csproj
+++ b/Tasker/BLL.App.DTO/BLL.App.DTO.csproj
@@ -10,7 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DAL.App.DTO\DAL.App.DTO.csproj" />
+        <ProjectReference Include="..\Resources\Resources.csproj" />
     </ItemGroup>
 
 </Project>
